My first commit

--- a/Saini_AboutMe.html
+++ b/Saini_AboutMe.html
@@ -17,7 +17,7 @@
                          <div class='pull-right'>
                             <ul class='nav nav-pills'>
                                 <li class='active'>
-                                    <a href= 'Saini_Home.html' id='blue' class='hm pic'>All</a>
+                                    <a href= 'index.html' id='blue' class='hm pic'>All</a>
                                 </li>
                                 <li class='active'>
                                     <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
@@ -40,11 +40,14 @@
                     <div class='row'>
                             <div class='thumbnail'>
                                 <p class='col-sm-3'>
-                                    <img src ="Images/untitled.png" id='abtme2'>
-                                   <h2 id='abtme'>My name is Khushi Saini and attend Dublin High School. When I grow up, I want to become a computer software engineer.  My inspiration is my dad because he is a computer software engineer as well and taught me the basics of coding. 
-                                   Furthermore, HTML and CSS are my favorite coding languages and the various selections of tags and classes are quite fascinating.In addition, when I have some spare time, I like to draw/paint, listen to music, read, bake, or play lacrosse. 
-                                   My favorite place to go with my friends and family is Cold Stone or Starbucks. Some things people are less likely to know about me are that I love to play basketball and lacrosse and that I’m a big time Warriors fan.
-                                   Moreover, I’ve been to nine states in the US and three countries. In all, I love to hangout with my friends and family and hope to become a computer engineer when I grow up. 
+                                    <img src ="Images/pics.jpg" id='abtme22'>
+                                   <h2 id='abtme'>My name is Khushi Saini and I currently attend Dublin High School. Moreover, my goals to pursue within the duration of my education is related
+                                   towards building a foundation of skills that could be applied to engineering along with leadership skills, teamwork, contribution, etc. With that being said, 
+                                   my overall goal is to apply all the concepts learned throughout the course of high school and become a computer software engineer. My interests mainly have to 
+                                   do with coding such as HTML and CSS, which I find quite intriguing due to the various selection of tags and classes along with Netlogo which has numerous agents
+                                   such as the turtles, patches, observers, etc.In addition, when I have some spare time, I like to draw/paint, listen to music, read, bake, or play lacrosse. Also,
+                                   some fun facts regarding myself are that  I love to play basketball and lacrosse and I’ve been to nine states in the US and three countries. 
+
                                    </h2>
                                 </p>
                             </div>              
