--- a/Saini_ContactMe.html
+++ b/Saini_ContactMe.html
@@ -17,7 +17,7 @@
                     <div class='pull-right'>
                         <ul class='nav nav-pills'>
                             <li >
-                                <a href= 'Saini_Home.html' id='blue' class='hm pic'>All</a>
+                                <a href= 'index.html' id='blue' class='hm pic'>All</a>
                             </li>
                             <li>
                                 <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
@@ -36,7 +36,7 @@
                   </div>
               </header>
                 <section class="jumbotron">
-                      <iframe src="https://docs.google.com/a/mydusd.org/forms/d/e/1FAIpQLSepKq-v4p3wrwiUAICVMBzJnh9406wkfS667wu2cD7jvT0-WA/viewform?embedded=true" width="1510" height="870" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                      <iframe src="https://docs.google.com/a/mydusd.org/forms/d/e/1FAIpQLSepKq-v4p3wrwiUAICVMBzJnh9406wkfS667wu2cD7jvT0-WA/viewform?embedded=true" width="1518" height="870" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </section>
                     <footer class='container'>
                        <div class='row'>
