--- a/Saini_Projects.html
+++ b/Saini_Projects.html
@@ -16,7 +16,7 @@
                         <div class='pull-right'>
                             <ul class='nav nav-pills'>
                                 <li class='active'>
-                                    <a href= 'Saini_Home.html' id='blue' class='hm pic'>All</a>
+                                    <a href= 'index.html' id='blue' class='hm pic'>All</a>
                                 </li>
                                 <li>
                                     <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
@@ -51,12 +51,24 @@
                                 <p class='col-sm-3' id='imgmani'>
                                     <img src ="Images/KITTEN_FINAL.png" id='abtme4'>
                                     <h1 id='aloha'>Image Manipulation</h1>
-                                   <h2 class='container' id='abtme30' >  The objective of this project was to manipulate the overall image in order to give it a cool effect or filter. in other words, the image should be more developed, in visual terms. Moreover, my partner, Kylie, and I agreed upon adding a watermark to the image and decided to mess with 
+                                   <h2 class='container' id='abtme30' >  The objective of this project was to manipulate the overall image in order to give it a cool effect or filter.In other words, the image should be more developed, in visual terms. Moreover, my partner, Kylie, and I agreed upon adding a watermark to the image and decided to mess with 
                             it's pixels. At the end of the day, we changed the plan and decided to change the images to look black and white and even grindy. Also, we agreed upon cutting out the corners in shapes of squares and add a border, but only to the bottom and the top. The outcome turned out to meet our expectations and goals, it had a picture, 
                             where the ends where cut out and in a shape of a square and the image was black and white and had a black border to make the image look more appealing. If we had more time, we could have completed the watermark but due to the amount of things we had to accomplish as well as the project log, we stuck with our plans.
                                    </h2>
                                 </p>
-                            </div>              
+                            </div>    
+                             <div class='thumbnail' id='th3'>
+                                <p class='col-sm-3'>
+                                    <img src ="Images/google-nexus-7-300px.jpg" id='abtme4'>
+                                    <h1 id='aloha'>Photo Booth</h1>
+                                   <h2 class='container' id='abtme3' >  The overall goal of this project was to build a machine which helps solve an everyday problem as well as incorporate at least four mechanisms. In addition, the problem being addressed in this project was carrying heavy objects up several levels and the solution resulted into a 
+                                   combination a block and tackle system, simple gear train, lever, and a chain and sprocket system. At the end of the day, the human effort would be applied onto the crank leading to the block and tackle system which would potentially lift up the heavy object , which in this case is a chair. Moreover, my contribution to this 
+                                   project was that I was in charge of building the gear train portion along with building the entire model as a whole. Also, I was in charge of completing the image modifications, descriptions, design brief, and calculations for the documentation portion of the project which is linked below. 
+                                   <a href = 'https://docs.google.com/document/d/17lKVsGOqtdCIi9GwwprLxL8h4GAG7EHXU-5yyRn2y_w/edit?usp=sharing' id= 'links'>P1_1_6 Documentation</a>
+                                   </h2>
+                                   
+                                </p>
+                            </div>
                         </p>
                     </div>
                 </section>
