--- a/Saini_Resume.html
+++ b/Saini_Resume.html
@@ -16,7 +16,7 @@
                         <div class='pull-right'>
                             <ul class='nav nav-pills'>
                                 <li class='active'>
-                                    <a href= 'Saini_Home.html' id='blue' class='hm pic'>All</a>
+                                    <a href= 'index.html' id='blue' class='hm pic'>All</a>
                                 </li>
                                 <li>
                                     <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
