My first commit

--- a/Saini_Projects.html
+++ b/Saini_Projects.html
@@ -59,7 +59,7 @@
                             </div>    
                              <div class='thumbnail' id='th3'>
                                 <p class='col-sm-3'>
-                                    <img src ="Images/google-nexus-7-300px.jpg" id='abtme4'>
+                                    <img src ="Images/mechanical.jpg" id='abtme44'>
                                     <h1 id='aloha'>Photo Booth</h1>
                                    <h2 class='container' id='abtme3' >  The overall goal of this project was to build a machine which helps solve an everyday problem as well as incorporate at least four mechanisms. In addition, the problem being addressed in this project was carrying heavy objects up several levels and the solution resulted into a 
                                    combination a block and tackle system, simple gear train, lever, and a chain and sprocket system. At the end of the day, the human effort would be applied onto the crank leading to the block and tackle system which would potentially lift up the heavy object , which in this case is a chair. Moreover, my contribution to this 
