My first commit

--- a/Saini_AboutMe.html
+++ b/Saini_AboutMe.html
@@ -23,7 +23,7 @@
                                     <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
                                 </li>
                                 <li>
-                                    <a href= 'Saini_Resume.html' id='blue' class='hm pic'>Resume</a>
+                                    <a href= 'Saini_WorkExper.html' id='blue' class='hm pic'>Work Experience</a>
                                 </li>
                                 <li>
                                     <a href= 'Saini_Projects.html' id='blue' class='hm pic'>Projects</a>
@@ -43,10 +43,11 @@
                                     <img src ="Images/pics.jpg" id='abtme22'>
                                    <h2 id='abtme'>My name is Khushi Saini and I currently attend Dublin High School. Moreover, my goals to pursue within the duration of my education is related
                                    towards building a foundation of skills that could be applied to engineering along with leadership skills, teamwork, contribution, etc. With that being said, 
-                                   my overall goal is to apply all the concepts learned throughout the course of high school and become a computer software engineer. My interests mainly have to 
+                                   my overall goal is to apply all the concepts learned throughout the course of high school and become a computer software engineer. Likewise, my interests mainly have to 
                                    do with coding such as HTML and CSS, which I find quite intriguing due to the various selection of tags and classes along with Netlogo which has numerous agents
-                                   such as the turtles, patches, observers, etc.In addition, when I have some spare time, I like to draw/paint, listen to music, read, bake, or play lacrosse. Also,
-                                   some fun facts regarding myself are that  I love to play basketball and lacrosse and I’ve been to nine states in the US and three countries. 
+                                   such as the turtles, patches, observers, etc. In addition, when I have some spare time, I like to practice and Indian Classical Dance called Kathak, which I have been
+                                   doing for the past 10 years.Also,  draw/paint, listen to music, read, bake, or play lacrosse. Also, 
+                                   some fun facts regarding myself are that I love to play basketball and lacrosse and I’ve been to nine states in the US and three countries. 
 
                                    </h2>
                                 </p>
