--- a/Saini_ContactMe.html
+++ b/Saini_ContactMe.html
@@ -23,7 +23,7 @@
                                 <a href= 'Saini_AboutMe.html' id='blue' class='hm pic'>About Me</a>
                             </li>
                             <li>
-                                <a href= 'Saini_Resume.html' id='blue' class='hm pic'>Resume</a>
+                                <a href= 'Saini_WorkExper.html' id='blue' class='hm pic'>Work Experience</a>
                             </li>
                             <li>
                                 <a href= 'Saini_Projects.html' id='blue' class='hm pic'>Projects</a>
