My first commit

--- a/Saini_WorkExper.html
+++ b/Saini_WorkExper.html
@@ -39,7 +39,13 @@
                         <div class='thumbnail' id='t'>
                             <p class='col-sm-3'>
                                 <h1 id='aloha7'>Work Experience</h1>
-                                <a href = 'Resume-KS (1).pdf' target="_blank" id="aloha8" >Click here to view my resume!</a>
+                                <a href = "Images/Resume-KS (5).pdf" target="_blank" id="aloha8" >Click here to view my resume!</a>
+                                <p class='col-sm-12' id='tk'> Throughout the journey of becoming a computer software engineer, I am attempting to gain work experience, knowledge, and skills
+                                in order to prepare for the base of foundation preffered at various companies. In addition, I have attended a variety of events such as the 
+                                SAP Field Trip, GTGTC events, etc which have continued to expand my desire to work in the computer software field. At Dublin High School, there are various oppurtunities
+                                which contribute to gaining information such as the field trips, events, along with the internships and programs. With that being said, I am currently 
+                                a work-in-progress as per the status of my diploma with the intention of majoring in computer science and software. 
+                                </p>
                                 </p>
                              
                           
